--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,9 +5,9 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
+@import url('./reviews.css');
+@import url('./benefits.css');
+@import url('./common.css');
 @import url('./animations.css');
 
 /* Sections style */
