--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,36 +1,43 @@
-<article class="badges">
-  <div class="container">
-    <ul class="badges-list">
-      <li class="badges-item">
-        <a
-          class="badges-link"
-          href="https://www.npmjs.com/package/vite-plugin-html-inject"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          HTML Inject
-        </a>
-      </li>
-      <li class="badges-item">
-        <a
-          class="badges-link"
-          href="https://www.npmjs.com/package/vite-plugin-full-reload"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Full Reload
-        </a>
-      </li>
-      <li class="badges-item">
-        <a
-          class="badges-link"
-          href="https://www.npmjs.com/package/postcss-sort-media-queries"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          Sort Media Queries
-        </a>
-      </li>
-    </ul>
-  </div>
-</article>
+<section>
+  <h2>Reviews</h2>
+  <ul>
+    <li>
+      <p>
+        Work with was extraordinary! He turned out to be a very competent and
+        responsible specialist. The projects were completed on time and the
+        result exceeded my expectations
+      </p>
+     <picture class="reviews-image-thumb">
+          <source
+            srcset="
+              /img/reviews/john-desk-1x.jpg 1x,
+              /img/reviews/john-desk-2x.jpg 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              /img/reviews/john-tab-1x.jpg 1x,
+              /img/reviews/john-tab-2x.jpg 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              /img/reviews/john-mob-1x.jpg 1x,
+              /img/reviews/john-mob-2x.jpg 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <img
+            src="/img/reviews/john-desk-2x.jpg"
+            alt="John Wax"
+            width="56"
+            height="56"
+            class="reviews-image"
+          />
+        </picture>
+        <div class="content-wrap">
+          <h3 class="reviews-subtitle">John Wax</h3></li>
+  </ul>
+</section>
