--- a/src/css/common.css
+++ b/src/css/common.css
@@ -33,7 +33,7 @@ img {
   height: auto;
 }
 
-:root {
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -198,4 +198,4 @@ html {
   .container {
     max-width: 1440px;
   }
-}
+} */
