--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,6 @@
-:root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+/* :root { */
+/* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
+/* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -18,6 +18,7 @@
 
 body {
   display: flex;
+  background-color: blueviolet;
   flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
@@ -29,4 +30,4 @@ main {
 }
 main:has(.back-link) {
   text-align: center;
-}
+}  */
