--- a/src/css/common.css
+++ b/src/css/common.css
@@ -33,7 +33,7 @@ img {
   height: auto;
 }
 
-/* :root {
+:root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -47,7 +47,7 @@ img {
 }
 
 body {
-  background-color: #0e1823;
+  background-color: #1b5a9c;
 }
 
 @media screen and (max-width: 360px) {
@@ -83,7 +83,7 @@ html {
   padding-top: 80px;
 }
 
-.header-btn {
+/* .header-btn {
   font-weight: 400;
   font-size: 9px;
   line-height: 1.3;
@@ -163,11 +163,11 @@ html {
   background-color: #fbfbfb;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 360px) {
   .container {
-    max-width: 768px;
+    max-width: 360px;
     padding-left: 32px;
     padding-right: 32px;
   }
@@ -176,26 +176,26 @@ html {
     padding-top: 150px;
   }
 
-  .our-yachts-btn,
+  /* .our-yachts-btn,
   .yachts-rental-btn {
     padding: 16px 40px;
   }
 
   .send-btn {
     padding: 18px 72px;
+  } */
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
-    padding-left: 50px;
-    padding-right: 50px;
   }
 }
-
-@media screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
-} */
