--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,3 +10,5 @@
 @import url('./common.css');
 @import url('./base.css');
 @import url('./container.css');
+@import url('./hero.css');
+@import url('./footer.css');
