--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,53 +1,65 @@
 <section class="benefits">
-  <h2 class="benefits-title">Benefits of working with me</h2>
+  <h2 class="benefits-title">Benefits <span class="benefits-title-black">of working with me</span></h2>
   <ul class="benefits-list">
-    <li class="icon-item">
+       <li class="benefits-item">
+      <li class="icon-item">
       <a href="" class="icon-link">
         <svg class="icon-icon" width="24" height="24">
           <use href="../img/message-chat-circle.svg"></use>
         </svg>
       </a>
-    </li>
-    <li class="benefits-item">Communication</li>
-    <p class="benefits-text">
+    </li> 
+    <h3 class="benefits-subtitle">Communication</h3>
+      <p class="benefits-text">
       Understanding your needs and wants is my priority and I am always
       available for discussions and open to corrections.
     </p>
-    <li class="icon-item">
+    </li>
+    
+   
+    <li class="benefits-item">
+       <li class="icon-item">
       <a href="" class="icon-link">
         <svg class="icon-icon" width="16" height="16">
           <use href="../img/brush-01.svg"></use>
         </svg>
       </a>
     </li>
-    <li class="benefits-item">Art</li>
+    <h3 class="benefits-subtitle">Art</h3> 
     <p class="benefits-text">
       Thanks to my creative nature, I am ready to accept challenges and help you
       bring your ideas to life.
-    </p>
-    <li class="icon-item">
+    </p></li>
+   
+   
+    <li class="benefits-item">
+       <li class="icon-item">
       <a href="" class="icon-link">
         <svg class="icon-icon" width="24" height="24">
           <use href="../img/user-01.svg"></use>
         </svg>
       </a>
     </li>
-    <li class="benefits-item">Expertise</li>
-    <p class="benefits-text">
+    <h3 class="benefits-subtitle">Expertise</h3>
+     <p class="benefits-text">
       With extensive experience in development, I have a deep understanding of
       programming and website development.
     </p>
-    <li class="icon-item">
+  </li>
+   
+    
+    <li class="benefits-item">
+      <li class="icon-item">
       <a href="" class="icon-link">
         <svg class="icon-icon" width="24" height="24">
           <use href="../img/hourglass-02.svg"></use>
         </svg>
       </a>
     </li>
-    <li class="benefits-item">Urgent execution</li>
-    <p class="benefits-text">
+    <h3 class="benefits-subtitle">Urgent execution</h3><p class="benefits-text">
       I understand how important time is to you. Ready to work quickly and
       efficiently, without reducing the quality of work.
-    </p>
+    </p></li>
+    
   </ul>
 </section>
