--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,43 +1,77 @@
-<section>
-  <h2>Reviews</h2>
+<section class="section reviews-section">
+  <h2 class="reviews-title">Reviews</h2>
   <ul>
     <li>
-      <p>
+      <p class="reviews-text">
         Work with was extraordinary! He turned out to be a very competent and
         responsible specialist. The projects were completed on time and the
         result exceeded my expectations
       </p>
-     <picture class="reviews-image-thumb">
-          <source
-            srcset="
-              /img/reviews/john-desk-1x.jpg 1x,
-              /img/reviews/john-desk-2x.jpg 2x
+      <picture class="reviews-image-thumb">
+        <source
+          srcset="/img/Natalia desk 1.jpg 1x,
+              /img/Natalia desk 2.jpg.jpg 2x
             "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
-              /img/reviews/john-tab-1x.jpg 1x,
-              /img/reviews/john-tab-2x.jpg 2x
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="/img/Natalia tab 1.jpg.jpg 1x,
+              /img/Natalia tab 2.jpg.jpg 2x
             "
-            media="(min-width: 768px)"
-          />
-          <source
-            srcset="
-              /img/reviews/john-mob-1x.jpg 1x,
-              /img/reviews/john-mob-2x.jpg 2x
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="../img/Natalia mob 1.jpg
+              /img/Natalia mob 1.jpg 1x,
+              /img/Natalia mob 2.jpg 2x
             "
-            media="(max-width: 767px)"
-          />
-          <img
-            src="/img/reviews/john-desk-2x.jpg"
-            alt="John Wax"
-            width="56"
-            height="56"
-            class="reviews-image"
-          />
-        </picture>
-        <div class="content-wrap">
-          <h3 class="reviews-subtitle">John Wax</h3></li>
+          media="(max-width: 767px)"
+        />
+        <img
+          src="/img/Natalia desk 2.jpg"
+          alt="Natalia Shevchenko"
+          width="40"
+          height="40"
+          class="reviews-image"
+        />
+      </picture>
+      <h3 class="reviews-subtitle">Natalia Shevchenko</h3>
+    </li>
+    <li>
+      <p class="reviews-text">
+        I have the honor to recommend him as an exceptional professional in his
+        field. His knowledge and expertise are undeniable. Cooperation with him
+        always brings impressive results.
+      </p>
+      <picture class="reviews-image-thumb">
+        <source
+          srcset="/img/Dmytro desk1.jpg 1x,
+              /img/Dmytro desk2.jpg.jpg 2x
+            "
+          media="(min-width: 1280px)"
+        />
+        <!-- <source
+          srcset="/img/Natalia tab 1.jpg.jpg 1x,
+              /img/Natalia tab 2.jpg.jpg 2x
+            "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="../img/Natalia mob 1.jpg
+              /img/Natalia mob 1.jpg 1x,
+              /img/Natalia mob 2.jpg 2x
+            "
+          media="(max-width: 767px)"
+        /> -->
+        <img
+          src="/img/Dmytro desk2.jpg"
+          alt="Natalia Shevchenko"
+          width="40"
+          height="40"
+          class="reviews-image"
+        />
+      </picture>
+      <h3 class="reviews-subtitle">Dmytro Nazarenko</h3>
+    </li>
   </ul>
 </section>
