--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -60,5 +60,14 @@
         </li>
       </ul>
     </address>
+    <div class="modal">
+      <div class="modal-window">
+        <button type="button" class="modal-window-btn">
+          <svg class="window-dtn-icon" width="22" height="22">
+            <use href="./assets/svg/icons.svg#icon-x"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </div>
 </footer>
