--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,6 @@
 .footer {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-title {
@@ -7,7 +9,6 @@
   flex-wrap: wrap;
   align-items: center;
   gap: 8px;
-  max-width: 375px;
   font-weight: 500;
   font-size: 40px;
   line-height: 1;
@@ -25,10 +26,6 @@
   color: #ed3b44;
 }
 
-/* .submit-form {
-  margin-right: 16px;
-  
-} */
 .input-wrap {
   display: flex;
   align-items: flex-start;
@@ -36,32 +33,46 @@
   flex-direction: column;
   gap: 16px;
   margin-bottom: 32px;
-  font-weight: 500;
   font-size: 16px;
+  line-height: 1.5;
   letter-spacing: -0.02em;
-  color: #fafafa;
+  color: rgba(250, 250, 250, 0.6);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: rgba(250, 250, 250, 0.6);
 }
 
 .input {
   width: 343px;
   height: 44px;
+  background-color: transparent;
 }
 
 .input:hover,
 .input:focus,
 .input:active {
   border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+  color: #fafafa;
 }
 
 .email-text-success {
   display: none;
-  color: #25c77c;
+  padding-top: 2px;
+  font-size: 14px;
+  line-height: 1.28571;
+  letter-spacing: -0.02em;
+  color: #3cbc81;
+  border-bottom: #3cbc81;
 }
 
 .email-text-error,
 .comments-text-error {
   display: none;
-  color: #e33525;
+  font-size: 14px;
+  line-height: 1.28571;
+  letter-spacing: -0.02em;
+  color: #e74a3b;
 }
 
 .send-btn {
@@ -75,6 +86,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .send-btn:hover,
 .send-btn:focus,
 .send-btn:active {
@@ -153,6 +165,15 @@
 }
 
 @media only screen and (min-width: 1440px) {
+  .footer {
+    margin-top: 80px;
+    margin-bottom: 196px;
+  }
+
+  .footer-title {
+    max-width: 542px;
+  }
+
   .input-wrap {
     width: 100%;
   }
@@ -163,11 +184,11 @@
 
   .send-btn {
     top: -75%;
-    left: 55%;
+    left: 60%;
   }
 }
 
-/* dynamic classes for js */
+/* class for js */
 
 .is-visible {
   display: block;
@@ -192,17 +213,95 @@
   border-color: #e74a3b;
 }
 
-/* Input reset webkit */
+/* modal */
 
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-  background-color: transparent;
-  transition: background-color 5000s ease-in-out 0s;
+.backdrop {
+  background: rgba(15, 15, 16, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  z-index: 99;
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+.modal-window {
+  padding: 64px 32px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: translate(-50%, -50%);
+  border: 1px solid rgba(250, 250, 250, 0.1);
+  border-radius: 20px;
+  width: 343px;
+  min-height: 276px;
+  background-color: var(--Background);
+}
+@media only screen and (min-width: 768px) {
+  .modal-window {
+    padding: 64px;
+    width: 492px;
+    min-height: 246px;
+  }
+}
+.window-dtn-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--Background);
+  border: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition: background 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.window-dtn-icon:active,
+.window-dtn-icon:hover {
+  background-color: var(--Button_background);
+}
+@media only screen and (min-width: 768px) {
+  .window-btn-icon {
+    width: 24px;
+    height: 24px;
+  }
+}
+.window-title {
+  font-family: var(--font-face);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--Main-text);
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .window-title {
+    width: 100%;
+    font-size: 19px;
+  }
 }
 
-input:-webkit-autofill::first-line,
-textarea:-webkit-autofill::first-line,
-select:-webkit-autofill::first-line {
-  color: #fafafa;
+.window-text {
+  font-family: var(--font-face);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--Opacity_60);
 }
