--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -215,93 +215,105 @@
 
 /* modal */
 
-.backdrop {
+.modal {
+  width: 100%;
+  height: 100%;
   background: rgba(15, 15, 16, 0.6);
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
   transition: opacity 0.5s ease, visibility 0.5s ease;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
   z-index: 99;
 }
-.backdrop.is-open {
+
+.modal.is-open {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
 }
+
 .modal-window {
   padding: 64px 32px;
   position: absolute;
   top: 50%;
   left: 50%;
   display: flex;
+  width: 343px;
+  min-height: 276px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   transform: translate(-50%, -50%);
   border: 1px solid rgba(250, 250, 250, 0.1);
   border-radius: 20px;
-  width: 343px;
-  min-height: 276px;
-  background-color: var(--Background);
+  background-color: #1c1d20;
 }
-@media only screen and (min-width: 768px) {
-  .modal-window {
-    padding: 64px;
-    width: 492px;
-    min-height: 246px;
-  }
-}
-.window-dtn-icon {
+
+.modal-window-btn-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--Background);
+  cursor: pointer;
+  background-color: #1c1d20;
   border: none;
   position: absolute;
   top: 20px;
   right: 20px;
-  cursor: pointer;
   border-radius: 8px;
-  transition: background 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: backgraund 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.window-dtn-icon:active,
-.window-dtn-icon:hover {
-  background-color: var(--Button_background);
+
+.modal-window-btn-icon:active,
+.modal-window-btn-icon:hover {
+  background-color: #e0373f;
 }
-@media only screen and (min-width: 768px) {
-  .window-btn-icon {
-    width: 24px;
-    height: 24px;
-  }
-}
-.window-title {
-  font-family: var(--font-face);
+
+/* .modal-text {
+  max-width: 279px;
+} */
+
+.modal-title {
+  /* max-width: 279px; */
+  margin-bottom: 20px;
   font-weight: 600;
   font-size: 20px;
   line-height: 1.5;
   letter-spacing: -0.02em;
   text-align: center;
-  color: var(--Main-text);
-  margin-bottom: 20px;
-}
-@media only screen and (min-width: 768px) {
-  .window-title {
-    width: 100%;
-    font-size: 19px;
-  }
+  color: #fafafa;
 }
 
-.window-text {
-  font-family: var(--font-face);
+.modal-message {
+  max-width: 279px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: -0.02em;
   text-align: center;
-  color: var(--Opacity_60);
+  color: rgba(250, 250, 250, 0.6);
+}
+
+@media screen and (min-width: 768px) {
+  .modal-window {
+    padding: 64px;
+    width: 492px;
+    min-height: 246px;
+  }
+
+  .modal-window-btn-icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  /* .modal-text {
+    max-width: 364px;
+  } */
+
+  .modal-title {
+    width: 100%;
+    /* max-width: 364px; */
+  }
 }
