--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -63,10 +63,15 @@
     <div class="modal">
       <div class="modal-window">
         <button type="button" class="modal-window-btn">
-          <svg class="window-dtn-icon" width="22" height="22">
-            <use href="./assets/svg/icons.svg#icon-x"></use>
+          <svg class="modal-window-btn-icon" width="14" height="14">
+            <use href="./svg/icons.svg#icon-x"></use>
           </svg>
         </button>
+        <h2 class="modal-title">Thank you for your interest in cooperation!</h2>
+        <p class="modal-message">
+          The manager will contact you shortly to discuss further details and
+          opportunities for cooperation. Please stay in touch.
+        </p>
       </div>
     </div>
   </div>
