--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -252,7 +252,7 @@
   background-color: #1c1d20;
 }
 
-.modal-window-btn-icon {
+.modal-window-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -266,8 +266,8 @@
   transition: backgraund 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.modal-window-btn-icon:active,
-.modal-window-btn-icon:hover {
+.modal-window-btn:active,
+.modal-window-btn:hover {
   background-color: #e0373f;
 }
 
